--- a/WingsOrdersSystem/App.config
+++ b/WingsOrdersSystem/App.config
@@ -6,4 +6,9 @@
 	<connectionStrings>
 		<add name="FactoriesEntity" connectionString="metadata=res://*/FactoriesModel.csdl|res://*/FactoriesModel.ssdl|res://*/FactoriesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
+	<connectionStrings>
+		<add name="SecureCoreG2Configuration"
+            connectionString="Data Source=sqlserver.S2AM.sdslab.cat;Initial Catalog=SecureCoreG2;User ID=G2;Password=12345aA@G22526.; Persist Security Info=false"
+            providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
