feat: creado el frmCrystal (#23)
* creado el frmCrystal

solo hace falta que el fichero edi lo llame y le mande los id's

* Update CrystalReport.csproj

* fix: connection

solucion app.config y buil-validation

* Update X-Wings_Orders.sln

añadido el EndProject

* Update build-validation.yml

fix: connection

* fix: app.config

quitado el duplicado

* fix: connection min

* fix:dependencias

he creado una carpeta para añadir las dependecias del crystal y que las coja de allí

* fix: referencias

no referencias

--- a/.github/workflows/build-validation.yml
+++ b/.github/workflows/build-validation.yml
@@ -24,5 +24,17 @@ jobs:
     - name: Restaurar dependencias
       run: nuget restore X-Wings_Orders.sln
 
+    - name: Descargar instalador de Crystal Reports (EXE)
+      shell: powershell
+      run: |
+        Invoke-WebRequest -Uri "https://github.com/JobHuntersSystems/X-Wings_Orders/releases/download/dependencias-cr/CRforVS13SP28_0-10010309.EXE" -OutFile "CRInstaller.exe"
+
+    - name: Instalar Crystal Reports silenciosamente
+      shell: powershell
+      run: |
+        Start-Process -FilePath "CRInstaller.exe" -ArgumentList "/q" -Wait -NoNewWindow
+
     - name: Compilar Solución
       run: msbuild X-Wings_Orders.sln /p:Configuration=Release /p:Platform="Any CPU"
+
+    
