--- a/WingsOrdersSystem/App.config
+++ b/WingsOrdersSystem/App.config
@@ -9,5 +9,6 @@
             connectionString="Data Source=sqlserver.S2AM.sdslab.cat;Initial Catalog=SecureCoreG2;User ID=G2;Password=12345aA@G22526.; Persist Security Info=false"
             providerName="System.Data.SqlClient" />
 	    <add name="OperationalAreasEntities" connectionString="metadata=res://*/OperationalAreasModel.csdl|res://*/OperationalAreasModel.ssdl|res://*/OperationalAreasModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="RoutesEntities" connectionString="metadata=res://*/RoutesModel.csdl|res://*/RoutesModel.ssdl|res://*/RoutesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 </configuration>
