--- a/EF_CRUD/EFOrders.csproj
+++ b/EF_CRUD/EFOrders.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Agency.cs">
       <DependentUpon>OrdersModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="OrdersCRUD.cs" />
+    <Compile Include="CurrentOrder.cs" />
     <Compile Include="Factory.cs">
       <DependentUpon>OrdersModel.tt</DependentUpon>
     </Compile>
