fix: Solución de referencias y naming
Han habido problemas a la hora de hacer un PR con algunos eventos del main y la conexión de EF del proyecto Filliations, por lo que se ha eliminado temporalemente hasta que se solucione.

--- a/Orders/App.Config
+++ b/Orders/App.Config
@@ -4,7 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings><add name="OrdersConfig" connectionString="metadata=res://*/OrdersModel.csdl|res://*/OrdersModel.ssdl|res://*/OrdersModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="OrdersEntities" connectionString="metadata=res://*/OrdersModel.csdl|res://*/OrdersModel.ssdl|res://*/OrdersModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
