--- a/Filliations/App.config
+++ b/Filliations/App.config
@@ -5,8 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Filliations.Properties.Settings.ConnectionString" connectionString="Data Source=sqlserver.S2AM.sdslab.cat;User ID=G2;Password=12345aA@G22526." providerName="System.Data.SqlClient" />
-    <add name="SecureCoreG2Entities" connectionString="metadata=res://*/FilliationsModel.csdl|res://*/FilliationsModel.ssdl|res://*/FilliationsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="FilliationsEntity" connectionString="metadata=res://*/FilliationsModel.csdl|res://*/FilliationsModel.ssdl|res://*/FilliationsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
