Revert "fix/frmFiliations_Axel"
This reverts commit 42efc6cfe0e2091a448716a393fbc1e947f1588c.

--- a/WingsOrdersSystem/WingsOrdersSystem.csproj
+++ b/WingsOrdersSystem/WingsOrdersSystem.csproj
@@ -88,9 +88,9 @@
       <Project>{fa6dda1a-587b-4210-8cd0-3fd6cfb71005}</Project>
       <Name>Factories</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Filiations\Filiations.csproj">
-      <Project>{f811b9cc-9856-4cbe-be70-a011d454e81f}</Project>
-      <Name>Filiations</Name>
+    <ProjectReference Include="..\Filliations\Filliations.csproj">
+      <Project>{7071662b-a2d2-4655-a3b8-8e866ce3b0f2}</Project>
+      <Name>Filliations</Name>
     </ProjectReference>
     <ProjectReference Include="..\FormsDesigner\FormsDesigner.csproj">
       <Project>{a720e2b0-7044-49e1-bc2e-11e8394bc8dc}</Project>
