--- a/WingsOrdersSystem/WingsOrdersSystem.csproj
+++ b/WingsOrdersSystem/WingsOrdersSystem.csproj
@@ -92,6 +92,10 @@
       <Project>{a720e2b0-7044-49e1-bc2e-11e8394bc8dc}</Project>
       <Name>FormsDesigner</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FTPServerProgram\FTPServerProgram.csproj">
+      <Project>{3c2bc488-9181-4a31-94de-944158f8540a}</Project>
+      <Name>FTPServerProgram</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OperationalAreas\OperationalAreas.csproj">
       <Project>{f5a1bffd-f5af-4470-8890-b10eaeb86a30}</Project>
       <Name>OperationalAreas</Name>
