refact: Diseño mejorado del  main y formulario base
se han modificado las propiedades de diseño y los colores de la aplicación entera.

--- a/FormsDesigner/FormsDesigner.csproj
+++ b/FormsDesigner/FormsDesigner.csproj
@@ -57,5 +57,11 @@
       <DependentUpon>frmBase.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\XWInheritedControls\XWInheritedControls.csproj">
+      <Project>{c6936942-dc1a-4f2c-bbd4-b27778ee5e93}</Project>
+      <Name>XWInheritedControls</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
