Se ha creado un nuevo modelo para evitar el duplicado de nombres en la conections string.

--- a/EF_CRUD/App.Config
+++ b/EF_CRUD/App.Config
@@ -4,6 +4,5 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="OrdersEntity" connectionString="metadata=res://*/OrdersModel.csdl|res://*/OrdersModel.ssdl|res://*/OrdersModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+	  <add name="EFOrdersEntity" connectionString="metadata=res://*/EFOrdersModel.csdl|res://*/EFOrdersModel.ssdl|res://*/EFOrdersModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
