--- a/Filiations/App.config
+++ b/Filiations/App.config
@@ -4,12 +4,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-	<add name="FilliationsEntity" connectionString="metadata=res://*/FilliationsModel.csdl|res://*/FilliationsModel.ssdl|res://*/FilliationsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
+  <connectionStrings>
+    <add name="FiliationsEntities" connectionString="metadata=res://*/FiliationsModel.csdl|res://*/FiliationsModel.ssdl|res://*/FiliationsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
